--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,15 @@ jobs:
       uses: hashicorp/setup-terraform@v2
       with:
         terraform_version: 1.5.7
+
+    - name: Echo Environment Variables
+      run: |
+        echo "ARM_CLIENT_ID: $ARM_CLIENT_ID"
+        echo "ARM_SUBSCRIPTION_ID: $ARM_SUBSCRIPTION_ID"
+        echo "ARM_TENANT_ID: $ARM_TENANT_ID"
+        # Avoid echoing sensitive secrets directly
+        echo "ARM_CLIENT_SECRET: [REDACTED]"
+        echo "ARM_ACCESS_KEY: [REDACTED]"
     - name: Terraform Init
       run: terraform init
     - name: Terraform Plan
